update VocabularyController: add getById
